--- a/src/blocks/profile/__box/profile__box.css
+++ b/src/blocks/profile/__box/profile__box.css
@@ -1,12 +1,16 @@
 .profile__box {
-    margin: 123px 0 0;
+    margin: 0;
     border-bottom: 1px solid #E8E8E8;
     display: flex;
     justify-content: space-between;
+    font-size: 11px;
+    line-height: 1.21;
+    font-weight: 500;
+    position: relative;
 }
 
 .profile__box:last-of-type {
-    margin: 0 0 220px;
+    margin: 17px 0 220px;
     border-bottom: 0;
 }
 
