added login, registration validation, burger menu, improved filter checkbox

--- a/src/blocks/burger/_active/burger_active.css
+++ b/src/blocks/burger/_active/burger_active.css
@@ -2,5 +2,7 @@
     display: flex;
     width: 22px;
     height: 20.5px;
-    padding-right: 18px;
+    position: absolute;
+    top: 29px;
+    right: 10px;
 }
