--- a/src/blocks/filter/__input/filter__input.css
+++ b/src/blocks/filter/__input/filter__input.css
@@ -9,8 +9,9 @@
 
 .filter__input:checked + .filter__switch {
 	background: #2BE080;
-}
+} 
 
 .filter__input:checked + .filter__switch:before {
-	transform: translateX(20px);
+	transform: translateX(-15px);
+    background: white;
 } 
