--- a/src/blocks/popup/__account/popup__account.css
+++ b/src/blocks/popup/__account/popup__account.css
@@ -16,6 +16,7 @@
 }
 @media screen and (max-width: 431px) {
     .popup__account {
+        margin-bottom: 48px;
         font-size: 14px;
     }
 }
