--- a/src/blocks/button/button.css
+++ b/src/blocks/button/button.css
@@ -5,4 +5,9 @@
     border-color: transparent;
     background-repeat: no-repeat;
     cursor: pointer;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.button:hover {
+    opacity: 0.6;
 }
