fix: added tooltip when editing profile

--- a/src/blocks/button/_theme/button_theme_edit.css
+++ b/src/blocks/button/_theme/button_theme_edit.css
@@ -2,6 +2,7 @@
     margin: 0 0 16px;
     text-decoration: none;
     background-color: transparent;
+    border-color: transparent;
     color: black;
     font-size: 13px;
     line-height: 1.21;
